--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
     "browser-sync": "^2.26.14",
     "gulp-imagemin": "^7.1.0",
     "gulp-rename": "^2.0.0",
-    "gulp-uglify-es": "^2.0.0"
+    "gulp-uglify-es": "2.0.0"  
   }
 }
