--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "gulp-clean-css": "^4.3.0",
     "gulp-file-include": "^2.3.0",
     "gulp-group-css-media-queries": "^1.2.2",
-    "gulp-sass": "^4.1.0"
+    "gulp-sass": "^4.1.0",
+    "gulp-ttf2woff": "^1.1.1",
+    "gulp-ttf2woff2": "^4.0.1",
+    "save-dev": "^0.0.1-security"
   },
   "devDependencies": {
     "browser-sync": "^2.26.14",
     "gulp-imagemin": "^7.1.0",
     "gulp-rename": "^2.0.0",
-    "gulp-uglify-es": "2.0.0"  
+    "gulp-uglify-es": "2.0.0"
   }
 }
